test/typecheck/bad-delegate-depth.txt
;;; TOOL: wat2wasm
;;; ERROR: 1
;;; ARGS: --enable-exceptions
(module
  (tag $e)
  (func
    try
      block
        try
          throw $e
        delegate 3
      end
    catch $e
    end))
(;; STDERR ;;;
out/test/typecheck/bad-delegate-depth.txt:9:9: error: invalid depth: 4 (max 3)
        try
        ^^^
;;; STDERR ;;)
